--- a/scss/style.css
+++ b/scss/style.css
@@ -92,6 +92,28 @@ body {
   background: #3292a6;
 }
 
+/*==================================
+            back-to-top
+====================================*/
+#back-to-top {
+  right: 20px;
+  bottom: 20px;
+  position: fixed;
+  padding: 3px 12px;
+  border-radius: 4px;
+  border: 1px solid yellow;
+  font-size: 20px;
+  display: none;
+  -webkit-transition: all 0.4s ease-out;
+  transition: all 0.4s ease-out;
+}
+
+#back-to-top:hover {
+  border: 2px solid #ff0d05;
+  background-color: #fdfd35;
+  color: blue;
+}
+
 @media (max-width: 576px) {
   #home h1 {
     font-size: 4rem;
