--- a/scss/style.scss
+++ b/scss/style.scss
@@ -99,6 +99,29 @@ body{
 }
 
 
+/*==================================
+            back-to-top
+====================================*/
+#back-to-top {
+  right: 20px;
+  bottom: 20px;
+  position: fixed;
+  padding: 3px 12px;
+  border-radius: 4px;
+  border: 1px solid yellow;
+  font-size: 20px;
+  display: none;
+  -webkit-transition: all 0.4s ease-out;
+  transition: all 0.4s ease-out;
+}
+#back-to-top:hover {
+  border: 2px solid rgb(255, 13, 5);
+  background-color: rgb(253, 253, 53);
+  color: blue;
+}
+
+
+
 
 @media(max-width: 576px){
     #home{
